# rust-web-app-example

./: README.md
actix-web-basic/: Cargo.toml  README.md
actix-web-basic/src/: main.rs
actix-web-basic/src/handler/: cookie_handler.rs  mod.rs
todo_list/: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-flyway.yml  docker-compose-local-db.yml  docker-compose.yml
todo_list/api/: Cargo.toml
todo_list/api/src/: main.rs
todo_list/api/src/error/: api_error.rs
todo_list/api/src/handler/: health_check_handler.rs  mod.rs  todo_handler.rs  todo_list_handler.rs
todo_list/api/src/model/: todo_list.rs
todo_list/db/: Dockerfile
todo_list/db/docker-entrypoint-initdb.d/: 00_init.sh
todo_list/db/migrations/: V0.1.0__init_tables.sql  V0.2.0__update_todo_table.sql
todo_list/docs/ER/: todo.erm
todo_list/docs/postman/: Todo List API.postman_collection.json
todo_list/domain/: Cargo.toml
todo_list/domain/src/error/: domain_error.rs
todo_list/domain/src/model/: mod.rs  todo.rs  todo_list.rs  todo_status.rs
todo_list/domain/src/repository/: mod.rs  todo_list_repository.rs  todo_repository.rs
todo_list/infrastructure/: Cargo.toml
todo_list/infrastructure/src/: lib.rs
todo_list/infrastructure/src/error/: infrastructure_error.rs  mod.rs
todo_list/infrastructure/src/repository/: connection_manager.rs  mod.rs  todo_list_repository.rs  todo_repository.rs
todo_list/service/: Cargo.toml
todo_list/service/src/error/: mod.rs  service_error.rs
todo_list/service/src/model/: mod.rs  todo.rs  todo_list.rs
todo_list/service/src/service/: mod.rs  todo_list_service.rs  todo_service.rs
