[package]
name = "api"
version = "0.1.0"
authors = ["Sho Yoshida"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
infrastructure = { path = "../infrastructure" }

actix-web = "3.3.2"
actix-cors = "0.5.4"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.125", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
