[package]
name = "domain"
version = "0.1.0"
authors = ["Sho Yoshida"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.24"
async-trait = "0.1.50"
