[package]
name = "infrastructure"
version = "0.1.0"
authors = ["Sho Yoshida"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

async-std = { version = "1.8.0", features = [ "attributes" ] }
async-trait = "0.1.50"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
sqlx = { version = "0.5.2", features = ["postgres", "chrono", "uuid", "runtime-async-std-native-tls"] }
thiserror = "1.0.24"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "2.2.0"
